--- a/Action page.html
+++ b/Action page.html
@@ -124,7 +124,7 @@ li.dropdown {
  
  <ul>
   <li><a href="movies theatre.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
-  <li><a href="Index.html" class="active">Home</a></li>
+  <li><a href="index.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
   <a href="movies theatre.html" class="dropbtn">Genre</a>
