--- a/FeedBack.html
+++ b/FeedBack.html
@@ -123,7 +123,7 @@ float: left;
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  
 <div class="navbar">
-<a href="Login.html" class="active">Buy Tickets</a>
+<a href="Payment.html" class="active">Buy Tickets</a>
 </div>
 
 <form class="image" action="movies threatre.html">
@@ -133,7 +133,7 @@ float: left;
  
  <ul>
   <li><a href="movies theatre.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
-  <li><a href="Index.html" class="active">Home</a></li>
+  <li><a href="index.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
   <a href="" class="dropbtn">Genre</a>
