--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@ body {
             font-family: 'Ubuntu', sans-serif
 	}
 	
-/* Style the navigation bar links */
 .navbar a {
   float: right;
   display: block;
@@ -123,7 +122,7 @@ color: red;
  
  <ul>
   <li><a href="movies theatre.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
-  <li><a href="Index.html" class="active">Home</a></li>
+  <li><a href="index.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
   <a href="movies theatre.html" class="dropbtn">Genre</a>
